[package]
name = "rs-replicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.0.1", features = ["serde"] }
serde = { version="1.0.176", features = ['derive']}
toml = "0.7.6"
log4rs = "1.2.0"