[package]
name = "rs-replicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.1.1", features = ["serde"] }
serde = { version="1.0.192", features = ['derive']}
toml = "0.8.8"
log4rs = "1.2.0"